tests/snapshots/snapshot_tests__complex_h.snap
---
source: tests/snapshot_tests.rs
assertion_line: 32
expression: header
---
#pragma once
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>

/* Auto-generated by rust2cython. Do not edit. */

const double* maybe_sqrt(double x);

int32_t safe_div(int32_t a, int32_t b);

double sum_vec(const double* values, size_t values_len);

double clamp(const double* x);

void rust2cython_free_string(char* ptr);
void rust2cython_free_string_array(char** ptr, size_t len);
