tests/snapshots/snapshot_tests__complex_pxd.snap
---
source: tests/snapshot_tests.rs
assertion_line: 30
expression: pxd
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t

cdef extern from "complex.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    # Note: Rust param/return must use *const <type> (not Option<T> directly)
    const double* c_maybe_sqrt "maybe_sqrt"(double x)

    int c_safe_div "safe_div"(int a, int b, char** error_out)

    double c_sum_vec "sum_vec"(const double* values, size_t values_len)

    # Note: Rust param/return must use *const <type> (not Option<T> directly)
    double c_clamp "clamp"(const double* x)
