tests/snapshots/snapshot_tests__complex_pyx.snap
---
source: tests/snapshot_tests.rs
assertion_line: 31
expression: pyx
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t
from libc.stdlib cimport free, malloc
import numpy as np

cdef extern from "complex.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    const double* c_maybe_sqrt "maybe_sqrt"(double x)

    int c_safe_div "safe_div"(int a, int b, char** error_out)

    double c_sum_vec "sum_vec"(const double* values, size_t values_len)

    double c_clamp "clamp"(const double* x)


def maybe_sqrt(x):
    cdef const double* _result = c_maybe_sqrt(x)
    return None if _result is NULL else _result[0]

def safe_div(a, b):
    cdef char* _err = NULL
    cdef int _result = c_safe_div(a, b, &_err)
    if _err is not NULL:
        msg = _err.decode('utf-8')
        free(_err)
        raise RuntimeError(msg)
    return _result

def sum_vec(values) -> float:
    cdef double[::1] _values_mv = np.asarray(values, dtype=np.float64)
    cdef double _result = c_sum_vec(&_values_mv[0], len(_values_mv))
    return _result

def clamp(x) -> float:
    cdef double _x_val
    cdef const double* _x_ptr
    if x is None:
        _x_ptr = NULL
    else:
        _x_val = x
        _x_ptr = &_x_val
    cdef double _result = c_clamp(_x_ptr)
    return _result
