tests/snapshots/snapshot_tests__impl_methods_h.snap
---
source: tests/snapshot_tests.rs
expression: header
---
#pragma once
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>

/* Auto-generated by rust2cython. Do not edit. */

typedef struct {
    double value;
} Calculator;

Calculator Calculator_new(double initial);

double Calculator_add(double a, double b);

double Calculator_multiply(double a, double b);

double standalone(double x);

void rust2cython_free_string(char* ptr);
void rust2cython_free_string_array(char** ptr, size_t len);
