tests/snapshots/snapshot_tests__impl_methods_pxd.snap
---
source: tests/snapshot_tests.rs
expression: pxd
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t

cdef extern from "impl_methods.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    ctypedef struct CCalculator "Calculator":
        double value

    CCalculator c_Calculator_new "Calculator_new"(double initial)

    double c_Calculator_add "Calculator_add"(double a, double b)

    double c_Calculator_multiply "Calculator_multiply"(double a, double b)

    double c_standalone "standalone"(double x)
