tests/snapshots/snapshot_tests__impl_methods_pyx.snap
---
source: tests/snapshot_tests.rs
expression: pyx
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t
from libc.stdlib cimport free, malloc
import numpy as np

cdef extern from "impl_methods.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    ctypedef struct CCalculator "Calculator":
        double value

    CCalculator c_Calculator_new "Calculator_new"(double initial)

    double c_Calculator_add "Calculator_add"(double a, double b)

    double c_Calculator_multiply "Calculator_multiply"(double a, double b)

    double c_standalone "standalone"(double x)


cdef class Calculator:
    cdef CCalculator _c
    def __init__(self, double value):
        self._c.value = value

def Calculator_new(initial) -> Calculator:
    cdef CCalculator _result = c_Calculator_new(initial)
    out = Calculator.__new__(Calculator)
    out._c = _result
    return out

def Calculator_add(a, b) -> float:
    cdef double _result = c_Calculator_add(a, b)
    return _result

def Calculator_multiply(a, b) -> float:
    cdef double _result = c_Calculator_multiply(a, b)
    return _result

def standalone(x) -> float:
    cdef double _result = c_standalone(x)
    return _result
