tests/snapshots/snapshot_tests__isize_types_h.snap
---
source: tests/snapshot_tests.rs
assertion_line: 32
expression: header
---
#pragma once
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>

/* Auto-generated by rust2cython. Do not edit. */

double signed_index(const double* arr, size_t arr_len, ptrdiff_t idx);

double offset_sum(const double* values, size_t values_len, ptrdiff_t offset);

void rust2cython_free_string(char* ptr);
void rust2cython_free_string_array(char** ptr, size_t len);
