tests/snapshots/snapshot_tests__isize_types_pxd.snap
---
source: tests/snapshot_tests.rs
assertion_line: 30
expression: pxd
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t

cdef extern from "isize_types.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    double c_signed_index "signed_index"(const double* arr, size_t arr_len, int idx)

    double c_offset_sum "offset_sum"(const double* values, size_t values_len, int offset)
