tests/snapshots/snapshot_tests__isize_types_pyx.snap
---
source: tests/snapshot_tests.rs
assertion_line: 31
expression: pyx
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t
from libc.stdlib cimport free, malloc
import numpy as np

cdef extern from "isize_types.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    double c_signed_index "signed_index"(const double* arr, size_t arr_len, int idx)

    double c_offset_sum "offset_sum"(const double* values, size_t values_len, int offset)


def signed_index(arr, idx) -> float:
    cdef double[::1] _arr_mv = np.asarray(arr, dtype=np.float64)
    cdef double _result = c_signed_index(&_arr_mv[0], len(_arr_mv), idx)
    return _result

def offset_sum(values, offset) -> float:
    cdef double[::1] _values_mv = np.asarray(values, dtype=np.float64)
    cdef double _result = c_offset_sum(&_values_mv[0], len(_values_mv), offset)
    return _result
