tests/snapshots/snapshot_tests__nested_unsupported_h.snap
---
source: tests/snapshot_tests.rs
assertion_line: 32
expression: header
---
#pragma once
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>

/* Auto-generated by rust2cython. Do not edit. */

HashMap count_chars(const char* s);

double pair_sum(unknown pair);

void rust2cython_free_string(char* ptr);
void rust2cython_free_string_array(char** ptr, size_t len);
