tests/snapshots/snapshot_tests__nested_unsupported_pxd.snap
---
source: tests/snapshot_tests.rs
assertion_line: 30
expression: pxd
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t

cdef extern from "nested_unsupported.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    # WARNING: skipped count_chars, unknown type HashMap

    # WARNING: skipped pair_sum, unknown type unknown
