tests/snapshots/snapshot_tests__nested_unsupported_pyx.snap
---
source: tests/snapshot_tests.rs
assertion_line: 31
expression: pyx
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t
from libc.stdlib cimport free, malloc
import numpy as np

cdef extern from "nested_unsupported.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    HashMap c_count_chars "count_chars"(const char* s)

    double c_pair_sum "pair_sum"(Cunknown pair)


def count_chars(s) -> HashMap:
    cdef bytes _s_b = s.encode('utf-8') if s is not None else None
    cdef CHashMap _result = c_count_chars(_s_b if s is not None else NULL)
    out = HashMap.__new__(HashMap)
    out._c = _result
    return out

# WARNING: skipped pair_sum, unknown named
